--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,10 +33,22 @@
             android:src="@drawable/ic_user_icon" />
 
         <ImageButton
-            android:id="@+id/settings_button"
+            android:id="@+id/achievements_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_below="@id/user_button"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_user_achievements" />
+
+        <ImageButton
+            android:id="@+id/settings_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_below="@id/achievements_button"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="16dp"
