--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -45,5 +45,8 @@
         <item name="android:background">@drawable/custom_button_background</item>
     </style>
 
+    <style name="CustomProgressBarStyle" parent="@android:style/Widget.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/custom_progress_bar</item>
+    </style>
 
 </resources>
