--- a/app/src/main/res/layout/activity_classic.xml
+++ b/app/src/main/res/layout/activity_classic.xml
@@ -21,58 +21,25 @@
         android:id="@+id/heartsLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:layout_marginStart="15dp">
-
-        <ImageView
-            android:id="@+id/heart1"
-            style="@style/SubtitleTextStyle"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:srcCompat="@drawable/heart_icon" />
-
-        <ImageView
-            android:id="@+id/heart2"
-            style="@style/SubtitleTextStyle"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="2dp"
-            app:srcCompat="@drawable/heart_icon" />
-
-        <ImageView
-            android:id="@+id/heart3"
-            style="@style/SubtitleTextStyle"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="2dp"
-            app:srcCompat="@drawable/heart_icon" />
-
-        <ImageView
-            android:id="@+id/heart4"
-            style="@style/SubtitleTextStyle"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="2dp"
-            app:srcCompat="@drawable/heart_icon" />
-
-        <ImageView
-            android:id="@+id/heart5"
-            style="@style/SubtitleTextStyle"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="2dp"
-            app:srcCompat="@drawable/heart_icon" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/heartsText"
-        style="@style/SubtitleTextStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/heartsLayout"
+        android:layout_marginTop="60dp"
         android:layout_marginStart="15dp"
-        android:text="x5" />
+        android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/heartIcon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/heart_icon" />
+
+        <TextView
+            android:id="@+id/heartsCountText"
+            style="@style/SubtitleTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/orange_volc" />
+    </LinearLayout>
 
     <!-- Text for Score -->
     <TextView
